fix spacing in about page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -296,9 +296,11 @@ p{
 
 #resumelink{
     border: 1px solid;
-    margin: 15px;
+    /*margin: 15px;*/   
     padding-top: 15px;
     padding-bottom: 15px;
+    margin-left:15px;
+    margin-top: 15px; 
 }
 
 .overlay{
